Actions
Bug #9975
closedloader.efi: unused variable 'err'
Start date:
2018-11-11
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:
Description
Build error with warnings enabled:
../env.c: In function 'command_efi_set': ../env.c:917:13: error: unused variable 'err' [-Werror=unused-variable] EFI_STATUS err; ^~~ ../env.c: In function 'command_efi_unset': ../env.c:954:13: error: unused variable 'err' [-Werror=unused-variable] EFI_STATUS err; ^~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 2b811402e28c1eea57dd7a5e98c7f1c72637ffd9
commit 2b811402e28c1eea57dd7a5e98c7f1c72637ffd9 Author: Toomas Soome <tsoome@me.com> Date: 2018-12-03T14:31:37.000Z 9975 loader.efi: unused variable 'err' Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Reviewed by: John Levon <john.levon@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions